# Skyn.AI

./: README.md  requirements.txt
Backend/: flask_app.py
Backend/models/recommender/: final_extended_dataset2.csv  makeup_dataset2.csv  rec.py
Frontend/: package-lock.json  package.json
Frontend/src/views/: Form.jsx
ML/skynai/: LICENSE  Makefile  README.md  pyproject.toml
ML/skynai/docs/: mkdocs.yml
ML/skynai/docs/docs/: index.md
ML/skynai/skyn/: __init__.py  dataset.py  features.py  plots.py
ML/skynai/skyn/modeling/: predict.py  train.py
ML/skynai/skyn/recommendation_engine/: 3_Skincare_Recommendation.ipynb  Recommendation_Engine.ipynb  final_dataset.csv  final_extended_dataset.csv  fmerged.csv  makeup_dataset.csv  makeup_dataset2.csv  merge.ipynb  merged.csv  merged2_final.csv  product_details.csv  scraper.py  skincare.csv  urls.csv
ML/skynai/skyn/skin_metrics/acne/: Acne.ipynb
ML/skynai/skyn/skin_metrics/tone/: main.py  skd2.py  skin_detection.py
ML/skynai/skyn/skin_metrics/type/: SkinTone(1).ipynb
